mgb学习基本结束

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
             <version>1.4.0</version>
         </dependency>
 
+        <!--    mybatis    -->
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.0</version>
+        </dependency>
 
     </dependencies>
 
