--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>mybatis-mapper-spring</module>
         <module>mybatis-mapper-common</module>
         <module>mybatis-mapper-generator</module>
+        <module>mybatis-common-mapper-generator</module>
     </modules>
 
     <properties>
@@ -21,56 +22,58 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
-    <dependencies>
-        <!--        log -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.8.0-beta2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.8.0-beta2</version>
-        </dependency>
+    <dependencyManagement>
+        <dependencies>
+            <!--        log -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.8.0-beta2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>1.8.0-beta2</version>
+            </dependency>
 
-        <!--      test  -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>compile</scope>
-        </dependency>
+            <!--      test  -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
+                <scope>compile</scope>
+            </dependency>
 
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.62</version>
-        </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.62</version>
+            </dependency>
 
 
-        <!--    mybatis    -->
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>3.5.0</version>
-        </dependency>
+            <!--    mybatis    -->
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis</artifactId>
+                <version>3.5.0</version>
+            </dependency>
 
-        <!--     mapper   -->
-        <dependency>
-            <groupId>tk.mybatis</groupId>
-            <artifactId>mapper</artifactId>
-            <version>4.0.4</version>
-        </dependency>
+            <!--     mapper   -->
+            <dependency>
+                <groupId>tk.mybatis</groupId>
+                <artifactId>mapper</artifactId>
+                <version>4.0.4</version>
+            </dependency>
 
-        <!--    mysql-connector    -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.16</version>
-            <!-- 升级到8.0.16版本，因为mysql服务器的版本升级到了8.x，其认证方法改成了caching_sha2_password -->
-        </dependency>
-    </dependencies>
+            <!--    mysql-connector    -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>8.0.16</version>
+                <!-- 升级到8.0.16版本，因为mysql服务器的版本升级到了8.x，其认证方法改成了caching_sha2_password -->
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
 
@@ -96,9 +99,9 @@
                         <version>8.0.16</version>
                     </dependency>
                     <!--<dependency>-->
-                        <!--<groupId>tk.mybatis</groupId>-->
-                        <!--<artifactId>mapper</artifactId>-->
-                        <!--<version>4.0.4</version>-->
+                    <!--<groupId>tk.mybatis</groupId>-->
+                    <!--<artifactId>mapper</artifactId>-->
+                    <!--<version>4.0.4</version>-->
                     <!--</dependency>-->
                 </dependencies>
             </plugin>
