--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>pom</packaging>
     <version>1.0.0</version>
     <modules>
-        <module>mybatis-mapper-generator</module>
+<!--        <module>mybatis-mapper-generator</module>-->
         <module>mybatis-common-mapper-generator</module>
         <module>mybatis-base-use-xml-config</module>
         <module>mybatis-base-use-annotion-config</module>
@@ -97,35 +97,35 @@
 
     <build>
 
-        <plugins>
-            <plugin>
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.4</version>
-                <configuration>
-                    <configurationFile>src/main/resources/generator-config.xml</configurationFile>
-                    <verbose>true</verbose>
-                    <overwrite>true</overwrite>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.mybatis.generator</groupId>
-                        <artifactId>mybatis-generator-core</artifactId>
-                        <version>1.3.4</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>mysql</groupId>
-                        <artifactId>mysql-connector-java</artifactId>
-                        <version>8.0.16</version>
-                    </dependency>
-                    <!--<dependency>-->
-                    <!--<groupId>tk.mybatis</groupId>-->
-                    <!--<artifactId>mapper</artifactId>-->
-                    <!--<version>4.0.4</version>-->
-                    <!--</dependency>-->
-                </dependencies>
-            </plugin>
-        </plugins>
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.mybatis.generator</groupId>-->
+<!--                <artifactId>mybatis-generator-maven-plugin</artifactId>-->
+<!--                <version>1.3.4</version>-->
+<!--                <configuration>-->
+<!--                    <configurationFile>src/main/resources/generator-config.xml</configurationFile>-->
+<!--                    <verbose>true</verbose>-->
+<!--                    <overwrite>true</overwrite>-->
+<!--                </configuration>-->
+<!--                <dependencies>-->
+<!--                    <dependency>-->
+<!--                        <groupId>org.mybatis.generator</groupId>-->
+<!--                        <artifactId>mybatis-generator-core</artifactId>-->
+<!--                        <version>1.3.4</version>-->
+<!--                    </dependency>-->
+<!--                    <dependency>-->
+<!--                        <groupId>mysql</groupId>-->
+<!--                        <artifactId>mysql-connector-java</artifactId>-->
+<!--                        <version>8.0.16</version>-->
+<!--                    </dependency>-->
+<!--                    &lt;!&ndash;<dependency>&ndash;&gt;-->
+<!--                    &lt;!&ndash;<groupId>tk.mybatis</groupId>&ndash;&gt;-->
+<!--                    &lt;!&ndash;<artifactId>mapper</artifactId>&ndash;&gt;-->
+<!--                    &lt;!&ndash;<version>4.0.4</version>&ndash;&gt;-->
+<!--                    &lt;!&ndash;</dependency>&ndash;&gt;-->
+<!--                </dependencies>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
 
 
     </build>
