--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
                 <scope>compile</scope>
             </dependency>
 
+            <!--     fastjson       -->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
@@ -58,7 +59,7 @@
             <dependency>
                 <groupId>org.mybatis</groupId>
                 <artifactId>mybatis</artifactId>
-                <version>3.5.0</version>
+                <version>3.4.6</version>
             </dependency>
 
             <!--     mapper   -->
